oapi defs (#9)
* add gorup

* Worked on a number of paths

* Stuff
