# service/internal/logic/controller.go
@@ -3,6 +3,7 @@ package logic
 import (
 	"context"
 	"errors"
+	"github.com/google/uuid"
 	"github.com/rmarken/reptr/service/internal/database"
 	"github.com/rmarken/reptr/service/internal/models"
 	"github.com/rs/zerolog"
@@ -15,10 +16,10 @@ var _ Controller = &Logic{}
 
 type (
 	Controller interface {
-		CreateGroup(ctx context.Context, group models.Group) (string, error)
+		CreateGroup(ctx context.Context, groupName string) (string, error)
 		AddDeckToGroup(ctx context.Context, groupID, deckID string) error
 		GetGroups(ctx context.Context, from time.Time, to *time.Time, limit, offset int) ([]models.GroupWithDecks, error)
-		CreateDeck(ctx context.Context, deck models.Deck) (string, error)
+		CreateDeck(ctx context.Context, deckName string) (string, error)
 		GetDecks(ctx context.Context, from time.Time, to *time.Time, limit, offset int) ([]models.DeckWithCards, error)
 		AddCardToDeck(ctx context.Context, deckID string, card models.Card) error
 		UpdateCard(ctx context.Context, card models.Card) error
@@ -43,11 +44,21 @@ func New(logger zerolog.Logger, db *mongo.Database) *Logic {
 }
 
 // CreateDeck attempts to insert [models.Deck] into mongo. If repo returns an error, the error is logged and returned.
-func (l *Logic) CreateDeck(ctx context.Context, deck models.Deck) (string, error) {
+func (l *Logic) CreateDeck(ctx context.Context, deckName string) (string, error) {
 	logger := l.logger.With().Str("module", "CreateDeck").Logger()
-	logger.Info().Msgf("insertDeck: %+v", deck)
+	logger.Info().Msgf("insertDeck: %s", deckName)
 
-	id, err := l.repo.InsertDeck(ctx, deck)
+	if deckName == "" {
+		logger.Error().Err(ErrInvalidGroupName).Msgf("deckName: %s", deckName)
+		return "", ErrInvalidDeckName
+	}
+
+	id, err := l.repo.InsertDeck(ctx, models.Deck{
+		ID:        uuid.NewString(),
+		Name:      deckName,
+		CreatedAt: time.Now(),
+		UpdatedAt: time.Now(),
+	})
 	if err != nil {
 		l.logger.Error().Err(err).Msg("while inserting deck")
 		return "", err
@@ -154,10 +165,20 @@ func (l *Logic) RemoveDownvoteDeck(ctx context.Context, deckID, userID string) e
 	return nil
 }
 
-func (l *Logic) CreateGroup(ctx context.Context, group models.Group) (string, error) {
+func (l *Logic) CreateGroup(ctx context.Context, groupName string) (string, error) {
 	logger := l.logger.With().Str("module", "CreateGroup").Logger()
-	logger.Info().Msgf("CreateGroup: %+v", group)
-	gpID, err := l.repo.InsertGroup(ctx, group)
+	logger.Info().Msgf("CreateGroup: %s", groupName)
+	if groupName == "" {
+		logger.Error().Err(ErrInvalidGroupName).Msgf("groupName: %s", groupName)
+		return "", ErrInvalidGroupName
+	}
+	gpID, err := l.repo.InsertGroup(ctx, models.Group{
+		ID:        uuid.NewString(),
+		Name:      groupName,
+		CreatedAt: time.Now(),
+		UpdatedAt: time.Now(),
+		DeletedAt: nil,
+	})
 	if err != nil {
 		l.logger.Error().Err(err).Msg("while inserting group")
 		return "", err
@@ -168,6 +189,16 @@ func (l *Logic) CreateGroup(ctx context.Context, group models.Group) (string, er
 func (l *Logic) AddDeckToGroup(ctx context.Context, groupID, deckID string) error {
 	logger := l.logger.With().Str("module", "AddDeckToGroup").Logger()
 	logger.Info().Msgf("Adding deck: %s to group: %s", deckID, groupID)
+
+	if groupID == "" {
+		logger.Error().Err(ErrEmptyDeckID).Msgf("group: %s", groupID)
+		return ErrEmptyDeckID
+	}
+
+	if deckID == "" {
+		logger.Error().Err(ErrEmptyDeckID).Msgf("deck: %s", deckID)
+		return ErrEmptyDeckID
+	}
 
 	err := l.repo.AddDeckToGroup(ctx, groupID, deckID)
 	if err != nil {
